@@ -61,6 +61,7 @@
 
     "NepgearsyHUDRebornMenu/Buttons/ColorsCat" : "Color options",
     "NepgearsyHUDRebornMenu/Buttons/Colors/CPColor" : "Цвет панели контроля",
+    "NepgearsyHUDRebornMenu/Buttons/Colors/CPBorderColor" : "Control Panel Border Color",
     "NepgearsyHUDRebornMenu/Buttons/Colors/HealthColor" : "Цвет шкалы здоровья",
     "NepgearsyHUDRebornMenu/Buttons/Colors/ShieldColor" : "Цвет шкалы брони",
 	"NepgearsyHUDRebornMenu/Buttons/Colors/ObjectiveColor" : "Цвет иконки задачи",    
