@@ -54,6 +54,7 @@
             <option type="bool" default_value="true" name="EnableHorizontalLoadout"/>
 
             <option type="number" default_value="1" name="CPColor"/>
+            <option type="number" default_value="5" name="CPBorderColor"/>
             <option type="number" default_value="2" name="HealthColor"/>
             <option type="number" default_value="1" name="ShieldColor"/>
             <option type="number" default_value="1" name="ObjectiveColor"/>
