@@ -1,6 +1,11 @@
 1.3.1
 - Fixed a crash with the minimap when it's forced on some maps.
 - Fixed the ERROR lines in the control panel.
+- Added Border Color option for the control panel.
+- Fixed the changelog, now you can scroll...
+...
+...
+...
 
 1.3.0
 - Added Health Style option. You can now pick my new texture or the vanilla one. [This was a request!]
